# boulette

./: CMakeLists.txt  README.md
examples/example1/: CMakeLists.txt  camera.cc  camera.h  main.cc
lib/: CMakeLists.txt
lib/cmake/: FindOpenCL.cmake
lib/include/: aabb.h  boulette.h  bvh.h  mesh.h  rtrimesh.h  shape.h  shpere.h  sphere.h
lib/src/: boulette.cc  bvh.cc
